--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>QPUC Name Randomizer</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <h1>Hello World!</h1>
@@ -12,6 +14,6 @@
         Chromium <span id="chrome-version"></span>,
         and Electron <span id="electron-version"></span>.
     </p>
-    <p>Ici, future application de tirage au sort pour le club QPUC d'Anzin</p>
+    <button id="test">Test</button>
 </body>
 </html>
