--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <div class="content">
             <div class="game-parameters">
                 <h2>Paramètres de jeu</h2>
-                <textarea name="name-players" class="draw-area" cols="30" rows="10" placeholder="Insérez les noms des joueurs ici (1 par ligne)"></textarea>
+                <textarea name="name-players" class="draw-area" cols="20" rows="10" placeholder="Insérez les noms des joueurs ici (1 par ligne)"></textarea>
                 <button id="btn-tirage-sort">Tirer au sort</button>
                 <div class="additional-options">
                     <h3>Options supplémentaires</h3>
                     <label for="remaining-players">Combien de joueurs restants doivent être tirés au sort ?</label>
-                    <input type="number" id="remaining-players" value="1" min="1" max="5">
+                    <input type="number" id="remaining-players" value="5" min="1" max="5">
                 </div>
             </div>
             <div class="draw-results">
@@ -34,5 +34,6 @@
             </div>
         </div>
     </div>
+    <script src="renderer.js"></script>
 </body>
 </html>
