--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <h2>Paramètres de jeu</h2>
                 <textarea name="name-players" class="draw-area" cols="20" rows="10" placeholder="Insérez les noms des joueurs ici (1 par ligne)"></textarea>
                 <button id="btn-tirage-sort">Tirer au sort</button>
+                <button class="reset">Remise à zéro</button>
                 <div class="additional-options">
                     <h3>Options supplémentaires</h3>
                     <label for="remaining-players">Combien de joueurs restants doivent être tirés au sort ?</label>
@@ -31,6 +32,16 @@
                     <li></li>
                     <li></li>
                 </ol>
+                <div class="number-game-of-players">
+                    <h3>Nombre de tirages total par joueur :</h3>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li> 
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
