feat(index.html): update file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h2>Paramètres de jeu</h2>
                 <textarea name="name-players" class="draw-area" cols="20" rows="10" placeholder="Insérez les noms des joueurs ici (1 par ligne)"></textarea>
                 <button id="btn-tirage-sort">Tirer au sort</button>
-                <button class="reset">Remise à zéro</button>
+                <button class="reset">Rénitialiser les noms tirés</button>
                 <div class="additional-options">
                     <h3>Options supplémentaires</h3>
                     <label for="remaining-players">Combien de joueurs restants doivent être tirés au sort ?</label>
@@ -41,6 +41,7 @@
                         <li></li>
                         <li></li> 
                     </ul>
+                    <button class="remise-a-zero-tirages">Tout remettre à zéro</button>
                 </div>
             </div>
         </div>
